Spec R409: quiet graphitron:dev RAG-warm log noise
Expand R409 to Spec with the plan reviewed by principles-architect:
- D1 mute the non-actionable DJL tokenizer warning best-effort (slf4j-simple
  property + JUL level), prose claims "attempted" not "gone".
- D2 do not swallow the actionable Lucene vectorization warning; raise its JUL
  logger and demote to a single graphitron line naming the incubator flag,
  gated on module presence so a flagged JVM stays silent.
- D3 place the suppression in a graphitron-mcp helper called only by DevMojo,
  keeping RAG logger-name knowledge behind the dependency-quarantine seam.
- D4 document the recommended .mvn/jvm.config for the Maven-runtime warnings
  graphitron cannot suppress in-process.
Ordering/idempotency and a light helper unit test pinned; group-3 in-code
suppression and JVM forking ruled out of scope.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01HBNKhu3EtRPr2fWyrepnoY